--- a/AmazonMaven/pom.xml
+++ b/AmazonMaven/pom.xml
@@ -47,6 +47,12 @@
 	    <version>4.0.1</version>
 	</dependency>
 	
+	<dependency>
+		<groupId>io.github.bonigarcia</groupId>
+		<artifactId>webdrivermanager</artifactId>
+		<version>3.3.0</version>
+</dependency>
+	
   </dependencies>
  
    <build>
